# cold_email-engine

./: .dockerignore  .env.example  .env.production.example  .gitignore  ANALYSE-BACKUP-COLD.md  ANALYSE-SCALABILITE-PROTECTION.md  ARCHITECTURE-ENTERPRISE.md  ARCHITECTURE-INFRASTRUCTURE.md  ARCHITECTURE-MULTI-SOURCES.md  ARCHITECTURE-PRODUCTION.md  AUDIT-COMPARAISON-SYSTEMES.md  CERTIFICATION-FINALE.md  CHANGELOG.md  CLARIFICATION-ARCHITECTURE-FINALE.md  CLARIFICATION-FINALE.md  CONFIGURATION-FINALE.md  DEPLOIEMENT-FINAL-2026-02-16.md  DEPLOY.md  Dockerfile  IMPLEMENTATION-COMPLETE.md  IMPLEMENTATION-STATUS.md  INSTALL_MAILWIZZ.sh  INSTALL_MAILWIZZ_FROM_BACKUP.sh  INSTALL_SSL.sh  INSTALL_VPS.sh  INSTRUCTIONS-LICENCES.md  OPTION-STOCKAGE-COMME-SYSTEME1.md  PHASE-1-VERIFICATION-FINALE.md  PHASE-2-COMPLETE.md  PHASE-2-IMPLEMENTATION.md  PLAN-IMPLEMENTATION-COMPLET.md  QUICKSTART.md  README-DEPLOYMENT.md  README-ENTERPRISE.md  README-V2-MULTI-SERVERS.md  README.md  SEPARATION-CRITIQUE-COLD-VS-NORMAL.md  SEPARATION-SYSTEMES-V1-V2.md  UPGRADE.md  VERIFICATION-COMPLETE-2026-02-16.md  (+9 more)
alembic/: env.py
app/: config.py  database.py  enums.py  logging_config.py  main.py  models.py
deploy/: deploy-all.sh  dns-helper.sh  email-engine.service  install.sh  logrotate  nginx.conf  update.sh  validate-coherence.sh
dns/: dns-templates.md
docs/: IMPLEMENTATION_SUMMARY.md  MAILWIZZ_PMTA_STATUS.md  PHASE3_COMPLETION.md  PHASE3_FILES_CREATED.md  PRODUCTION_READINESS.md  PRODUCTION_READY_COMPLETE.md  WARMUP_FIXES_APPLIED.md
mailwizz-email-engine/: pmta-config-20260216  (+1 more)
powermta/: config  (+2 more)
(+834 files in other folders)
